# ChessEngine

./: README.md  pyproject.toml  setup.cfg
src/chess_engine/: config.py
src/chess_engine/movement/: piece_movement.py  validate_move.py
src/chess_engine/notation/: algebraic_notation.py  forsyth_edwards_notation.py  portable_game_notation.py
src/movement/: piece_movement.py  validate_move.py
src/notation/: algebraic_notation.py  forsyth_edwards_notation.py  portable_game_notation.py
test_data/: hikaru_nakamura_latest_games.pgn  magnus_carlsen_latest_games.pgn
tests/: conftest.py  test_check.py  test_checkmate.py  test_with_played_games.py
tests/movement/: test_bishop_moves.py  test_king_moves.py  test_knight_moves.py  test_move_validity.py  test_pawn_moves.py  test_queen_moves.py  test_rook_moves.py
tests/notation/: test_algebraic_notation.py  test_fen_notation.py
