[metadata]
name = PyChessEngine
description = chess engine
author = Nicolas Parucker
license = MIT
license_file = LICENSE


[options]
packages =
    chess_engine
    chess_engine.notation
    chess_engine.movement
python_requires = >=3.10
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0

[options.package_data]
chess_engine = py.typed
chess_engine.notation = py.typed
chess_engine.movement = py.typed

[flake8]
max-line-length = 160

[mypy]
ignore_missing_imports = True
check_untyped_defs = True